--- a/app/src/main/res/layout/activity_forgot_password.xml
+++ b/app/src/main/res/layout/activity_forgot_password.xml
@@ -7,6 +7,20 @@
     android:layout_height="match_parent"
     android:background="@drawable/login_background_image">
 
+    <!-- icon back -->
+    <ImageView
+        android:id="@+id/icon_back"
+        android:layout_width="88dp"
+        android:layout_height="73dp"
+        android:layout_marginTop="16dp"
+        android:contentDescription="@string/icon_back"
+        android:scaleType="centerInside"
+        app:layout_constraintHorizontal_bias="0"
+        android:src="@drawable/icon_back"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"/>
+
     <!-- Logo Image -->
     <ImageView
         android:id="@+id/logoSmall"
@@ -22,14 +36,13 @@
 
     <LinearLayout
         android:id="@+id/linearLayout_forgot_password"
-        android:layout_width="wrap_content"
+        android:layout_width="310dp"
         android:layout_height="wrap_content"
         android:layout_marginBottom="372dp"
         android:orientation="vertical"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        android:layout_marginStart="90dp">
+        app:layout_constraintStart_toStartOf="parent">
 
         <!-- Title -->
         <TextView
@@ -42,7 +55,6 @@
             android:textSize="47sp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"/>
-
 
         <!-- Text -->
         <TextView
