--- a/app/src/main/res/layout/activity_create_account.xml
+++ b/app/src/main/res/layout/activity_create_account.xml
@@ -9,6 +9,20 @@
     tools:layout_editor_absoluteX="-3dp"
     tools:layout_editor_absoluteY="-5dp">
 
+    <!-- icon back -->
+    <ImageView
+        android:id="@+id/icon_back"
+        android:layout_width="88dp"
+        android:layout_height="73dp"
+        android:layout_marginTop="16dp"
+        android:contentDescription="@string/icon_back"
+        android:scaleType="centerInside"
+        app:layout_constraintHorizontal_bias="0"
+        android:src="@drawable/icon_back"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"/>
+
     <!-- Logo Image -->
     <ImageView
         android:id="@+id/logoSmall"
@@ -20,7 +34,7 @@
         android:src="@drawable/logo_small"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"/>
 
     <!-- Title -->
     <TextView
@@ -41,7 +55,7 @@
     <EditText
         android:id="@+id/nameInput"
         android:layout_width="347dp"
-        android:layout_height="45dp"
+        android:layout_height="48dp"
         android:layout_marginStart="32dp"
         android:layout_marginTop="4dp"
         android:layout_marginEnd="32dp"
@@ -81,7 +95,7 @@
     <EditText
         android:id="@+id/emailInput"
         android:layout_width="346dp"
-        android:layout_height="47dp"
+        android:layout_height="48dp"
         android:layout_marginStart="32dp"
         android:layout_marginTop="24dp"
         android:layout_marginEnd="32dp"
@@ -161,7 +175,7 @@
     <Button
         android:id="@+id/loginButton"
         android:layout_width="344dp"
-        android:layout_height="47dp"
+        android:layout_height="48dp"
         android:layout_marginStart="32dp"
         android:layout_marginTop="24dp"
         android:layout_marginEnd="32dp"
