--- a/app/src/main/res/layout/activity_edit_profile.xml
+++ b/app/src/main/res/layout/activity_edit_profile.xml
@@ -12,6 +12,20 @@
         android:layout_height="wrap_content"
         android:background="@drawable/edit_profile_backgroud">
 
+        <!-- icon back -->
+        <ImageView
+            android:id="@+id/icon_back"
+            android:layout_width="88dp"
+            android:layout_height="73dp"
+            android:layout_marginTop="16dp"
+            android:contentDescription="@string/icon_back"
+            android:scaleType="centerInside"
+            app:layout_constraintHorizontal_bias="0"
+            android:src="@drawable/icon_back"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"/>
+
         <!-- Logo Image -->
         <ImageView
             android:id="@+id/logoSmall"
@@ -281,7 +295,7 @@
         <Button
             android:id="@+id/editNewPasswordConfirmation"
             android:layout_width="344dp"
-            android:layout_height="47dp"
+            android:layout_height="48dp"
             android:layout_marginTop="50dp"
             android:layout_marginBottom="100dp"
             android:background="@drawable/button_with_shadow"
