--- a/app/src/main/res/layout/fragment_added_feedback.xml
+++ b/app/src/main/res/layout/fragment_added_feedback.xml
@@ -29,7 +29,7 @@
                 android:fontFamily="@font/league_spartan_medium"
                 android:text="@string/avalia_es_de"
                 android:textColor="#25183E"
-                android:textSize="28sp" />
+                android:textSize="30sp"/>
 
             <TextView
                 android:id="@+id/added_feedbacks_name_given"
@@ -38,7 +38,7 @@
                 android:fontFamily="@font/league_spartan_medium"
                 android:text="@string/name__"
                 android:textColor="#CB3086"
-                android:textSize="28sp" />
+                android:textSize="30sp"/>
         </LinearLayout>
 
         <LinearLayout
@@ -55,7 +55,7 @@
                 android:fontFamily="@font/league_spartan_medium"
                 android:text="@string/para"
                 android:textColor="#25183E"
-                android:textSize="28sp" />
+                android:textSize="30sp"/>
 
             <TextView
                 android:id="@+id/added_feedbacks_name_received"
@@ -64,7 +64,7 @@
                 android:fontFamily="@font/league_spartan_medium"
                 android:text="@string/name___"
                 android:textColor="#CB3086"
-                android:textSize="28sp" />
+                android:textSize="30sp"/>
         </LinearLayout>
     </LinearLayout>
 
@@ -89,19 +89,19 @@
             android:fontFamily="@font/league_spartan_medium"
             android:text="@string/iniciativa_"
             android:textColor="#007CBA"
-            android:textSize="26sp" />
+            android:textSize="30sp"/>
 
         <RatingBar
             android:id="@+id/rating_iniciativa"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="10dp"
             android:gravity="start"
             android:numStars="5"
             android:progressTint="@color/yellow_star"
-            android:scaleX="0.9"
-            android:scaleY="0.9"
-            android:stepSize="1.0" />
+            android:scaleX="0.7"
+            android:scaleY="0.7"
+            android:stepSize="1.0"
+            android:layout_marginStart="-30dp"/>
 
         <!-- Field 2: Conhecimento -->
         <TextView
@@ -112,19 +112,19 @@
             android:fontFamily="@font/league_spartan_medium"
             android:text="@string/conhecimento"
             android:textColor="#007CBA"
-            android:textSize="26sp" />
+            android:textSize="30sp"/>
 
         <RatingBar
             android:id="@+id/rating_conhecimento"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="10dp"
             android:gravity="start"
             android:numStars="5"
             android:progressTint="@color/yellow_star"
-            android:scaleX="0.9"
-            android:scaleY="0.9"
-            android:stepSize="1.0" />
+            android:scaleX="0.7"
+            android:scaleY="0.7"
+            android:stepSize="1.0"
+            android:layout_marginStart="-30dp" />
 
         <!-- Field 3: Colaboração -->
         <TextView
@@ -135,21 +135,21 @@
             android:fontFamily="@font/league_spartan_medium"
             android:text="@string/colabora_o_"
             android:textColor="#007CBA"
-            android:textSize="26sp" />
+            android:textSize="30sp"/>
 
         <RatingBar
             android:id="@+id/rating_colaboracao"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="10dp"
             android:gravity="start"
             android:numStars="5"
             android:progressTint="@color/yellow_star"
-            android:scaleX="0.9"
-            android:scaleY="0.9"
-            android:stepSize="1.0" />
+            android:scaleX="0.7"
+            android:scaleY="0.7"
+            android:stepSize="1.0"
+            android:layout_marginStart="-30dp" />
 
-        <!-- Field 4: Responsabilidade -->
+        <!-- Field 4: Comunicação -->
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -158,19 +158,19 @@
             android:fontFamily="@font/league_spartan_medium"
             android:text="@string/responsabilidade"
             android:textColor="#007CBA"
-            android:textSize="26sp" />
+            android:textSize="30sp"/>
 
         <RatingBar
             android:id="@+id/rating_responsabilidade"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="10dp"
             android:gravity="start"
             android:numStars="5"
             android:progressTint="@color/yellow_star"
-            android:scaleX="0.9"
-            android:scaleY="0.9"
-            android:stepSize="1.0" />
+            android:scaleX="0.7"
+            android:scaleY="0.7"
+            android:stepSize="1.0"
+            android:layout_marginStart="-30dp" />
     </LinearLayout>
 
     <!-- Comment Box -->
@@ -179,17 +179,15 @@
         android:id="@+id/comment_box"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:background="@android:color/transparent"
         android:layout_marginStart="25dp"
         android:layout_marginEnd="25dp"
-        android:layout_marginBottom="30dp"
-        android:background="@android:color/transparent"
-        android:gravity="top|start"
+        android:layout_marginBottom="25dp"
         android:minHeight="120dp"
         android:padding="8dp"
         android:text="@string/lorem_ipsum_dolor_sit_amet_consectetur_adipiscing_elit_phasellus_imperdiet_nulla_et_ullamcorper_dignissim_nullam_id_dolor_quis_velit_fringilla_venenatis_integer_vitae_metus_ac_felis_varius_posuere"
         android:textColor="@android:color/black"
         android:textSize="20sp"
-        android:textStyle="italic"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
