--- a/app/src/main/res/layout/fragment_leaderboards.xml
+++ b/app/src/main/res/layout/fragment_leaderboards.xml
@@ -82,6 +82,7 @@
                         android:layout_height="wrap_content"
                         android:layout_marginStart="-50dp"
                         android:numStars="5"
+                        android:stepSize="0.1"
                         android:scaleX="0.6"
                         android:scaleY="0.6" />
                 </LinearLayout>
@@ -151,6 +152,7 @@
                         android:layout_height="wrap_content"
                         android:layout_marginStart="-50dp"
                         android:numStars="5"
+                        android:stepSize="0.1"
                         android:scaleX="0.6"
                         android:scaleY="0.6" />
                 </LinearLayout>
