--- a/app/src/main/res/layout/fragment_added_feedback.xml
+++ b/app/src/main/res/layout/fragment_added_feedback.xml
@@ -1,195 +1,202 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:background="@android:color/transparent">
+    android:layout_height="match_parent">
 
-    <LinearLayout
-        android:id="@+id/added_feedback_title_container"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="50dp"
-        android:orientation="vertical"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
-
-        <LinearLayout
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal">
-
-            <TextView
-                android:id="@+id/added_feedbacks_title"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginEnd="8dp"
-                android:fontFamily="@font/league_spartan_medium"
-                android:text="@string/avalia_es_de"
-                android:textColor="#25183E"
-                android:textSize="30sp"/>
-
-            <TextView
-                android:id="@+id/added_feedbacks_name_given"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:fontFamily="@font/league_spartan_medium"
-                android:text="@string/name__"
-                android:textColor="#CB3086"
-                android:textSize="30sp"/>
-        </LinearLayout>
-
-        <LinearLayout
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginEnd="230dp"
-            android:orientation="horizontal">
-
-            <TextView
-                android:id="@+id/added_feedbacks_title_"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginEnd="8dp"
-                android:fontFamily="@font/league_spartan_medium"
-                android:text="@string/para"
-                android:textColor="#25183E"
-                android:textSize="30sp"/>
-
-            <TextView
-                android:id="@+id/added_feedbacks_name_received"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:fontFamily="@font/league_spartan_medium"
-                android:text="@string/name___"
-                android:textColor="#CB3086"
-                android:textSize="30sp"/>
-        </LinearLayout>
-    </LinearLayout>
-
-    <!-- Rating Section -->
-    <LinearLayout
-        android:id="@+id/rating_box"
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="15dp"
-        android:layout_marginBottom="35dp"
-        android:orientation="vertical"
-        android:padding="16dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/added_feedback_title_container">
+        android:background="@android:color/transparent">
 
-        <!-- Field 1: Iniciativa -->
+        <LinearLayout
+            android:id="@+id/added_feedback_title_container"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            android:layout_marginTop="65dp"
+            android:layout_marginStart="50dp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent">
+
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal">
+
+                <TextView
+                    android:id="@+id/added_feedbacks_title"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginEnd="8dp"
+                    android:fontFamily="@font/league_spartan_medium"
+                    android:text="@string/avalia_es_de"
+                    android:textColor="#25183E"
+                    android:textSize="30sp"/>
+
+                <TextView
+                    android:id="@+id/added_feedbacks_name_given"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:fontFamily="@font/league_spartan_medium"
+                    android:text="@string/name__"
+                    android:textColor="#CB3086"
+                    android:textSize="30sp"/>
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginEnd="230dp"
+                android:orientation="horizontal">
+
+                <TextView
+                    android:id="@+id/added_feedbacks_title_"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginEnd="8dp"
+                    android:fontFamily="@font/league_spartan_medium"
+                    android:text="@string/para"
+                    android:textColor="#25183E"
+                    android:textSize="30sp"/>
+
+                <TextView
+                    android:id="@+id/added_feedbacks_name_received"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:fontFamily="@font/league_spartan_medium"
+                    android:text="@string/name___"
+                    android:textColor="#CB3086"
+                    android:textSize="30sp"/>
+            </LinearLayout>
+        </LinearLayout>
+
+        <!-- Rating Section -->
+        <LinearLayout
+            android:id="@+id/rating_box"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="30dp"
+            android:layout_marginBottom="35dp"
+            android:orientation="vertical"
+            app:layout_constraintHorizontal_bias="0.2"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/added_feedback_title_container">
+
+            <!-- Field 1: Iniciativa -->
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="10dp"
+                android:fontFamily="@font/league_spartan_medium"
+                android:text="@string/iniciativa_"
+                android:textColor="#007CBA"
+                android:textSize="30sp"
+                android:layout_marginTop="12dp"/>
+
+            <RatingBar
+                android:id="@+id/rating_iniciativa"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:gravity="start"
+                android:numStars="5"
+                android:progressTint="@color/yellow_star"
+                android:scaleX="0.7"
+                android:scaleY="0.7"
+                android:stepSize="1.0"
+                android:layout_marginStart="-30dp" />
+
+            <!-- Field 2: Conhecimento -->
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="10dp"
+                android:layout_marginTop="12dp"
+                android:fontFamily="@font/league_spartan_medium"
+                android:text="@string/conhecimento"
+                android:textColor="#007CBA"
+                android:textSize="30sp"/>
+
+            <RatingBar
+                android:id="@+id/rating_conhecimento"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:gravity="start"
+                android:numStars="5"
+                android:progressTint="@color/yellow_star"
+                android:scaleX="0.7"
+                android:scaleY="0.7"
+                android:stepSize="1.0"
+                android:layout_marginStart="-30dp" />
+
+            <!-- Field 3: Colaboração -->
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="10dp"
+                android:layout_marginTop="12dp"
+                android:fontFamily="@font/league_spartan_medium"
+                android:text="@string/colabora_o_"
+                android:textColor="#007CBA"
+                android:textSize="30sp"/>
+
+            <RatingBar
+                android:id="@+id/rating_colaboracao"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:gravity="start"
+                android:numStars="5"
+                android:progressTint="@color/yellow_star"
+                android:scaleX="0.7"
+                android:scaleY="0.7"
+                android:stepSize="1.0"
+                android:layout_marginStart="-30dp" />
+
+            <!-- Field 4: Comunicação -->
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="10dp"
+                android:layout_marginTop="12dp"
+                android:fontFamily="@font/league_spartan_medium"
+                android:text="@string/responsabilidade"
+                android:textColor="#007CBA"
+                android:textSize="30sp"/>
+
+            <RatingBar
+                android:id="@+id/rating_responsabilidade"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:gravity="start"
+                android:numStars="5"
+                android:progressTint="@color/yellow_star"
+                android:scaleX="0.7"
+                android:scaleY="0.7"
+                android:stepSize="1.0"
+                android:layout_marginStart="-30dp" />
+        </LinearLayout>
+
+        <!-- Comment Box com margem adicional -->
         <TextView
-            android:layout_width="wrap_content"
+            android:id="@+id/comment_box"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginStart="10dp"
-            android:fontFamily="@font/league_spartan_medium"
-            android:text="@string/iniciativa_"
-            android:textColor="#007CBA"
-            android:textSize="30sp"/>
-
-        <RatingBar
-            android:id="@+id/rating_iniciativa"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:gravity="start"
-            android:numStars="5"
-            android:progressTint="@color/yellow_star"
-            android:scaleX="0.7"
-            android:scaleY="0.7"
-            android:stepSize="1.0"
-            android:layout_marginStart="-30dp"/>
-
-        <!-- Field 2: Conhecimento -->
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="10dp"
-            android:layout_marginTop="10dp"
-            android:fontFamily="@font/league_spartan_medium"
-            android:text="@string/conhecimento"
-            android:textColor="#007CBA"
-            android:textSize="30sp"/>
-
-        <RatingBar
-            android:id="@+id/rating_conhecimento"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:gravity="start"
-            android:numStars="5"
-            android:progressTint="@color/yellow_star"
-            android:scaleX="0.7"
-            android:scaleY="0.7"
-            android:stepSize="1.0"
-            android:layout_marginStart="-30dp" />
-
-        <!-- Field 3: Colaboração -->
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="10dp"
-            android:layout_marginTop="10dp"
-            android:fontFamily="@font/league_spartan_medium"
-            android:text="@string/colabora_o_"
-            android:textColor="#007CBA"
-            android:textSize="30sp"/>
-
-        <RatingBar
-            android:id="@+id/rating_colaboracao"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:gravity="start"
-            android:numStars="5"
-            android:progressTint="@color/yellow_star"
-            android:scaleX="0.7"
-            android:scaleY="0.7"
-            android:stepSize="1.0"
-            android:layout_marginStart="-30dp" />
-
-        <!-- Field 4: Comunicação -->
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="10dp"
-            android:layout_marginTop="10dp"
-            android:fontFamily="@font/league_spartan_medium"
-            android:text="@string/responsabilidade"
-            android:textColor="#007CBA"
-            android:textSize="30sp"/>
-
-        <RatingBar
-            android:id="@+id/rating_responsabilidade"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:gravity="start"
-            android:numStars="5"
-            android:progressTint="@color/yellow_star"
-            android:scaleX="0.7"
-            android:scaleY="0.7"
-            android:stepSize="1.0"
-            android:layout_marginStart="-30dp" />
-    </LinearLayout>
-
-    <!-- Comment Box -->
-
-    <TextView
-        android:id="@+id/comment_box"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:background="@android:color/transparent"
-        android:layout_marginStart="25dp"
-        android:layout_marginEnd="25dp"
-        android:layout_marginBottom="25dp"
-        android:minHeight="120dp"
-        android:padding="8dp"
-        android:text="@string/lorem_ipsum_dolor_sit_amet_consectetur_adipiscing_elit_phasellus_imperdiet_nulla_et_ullamcorper_dignissim_nullam_id_dolor_quis_velit_fringilla_venenatis_integer_vitae_metus_ac_felis_varius_posuere"
-        android:textColor="@android:color/black"
-        android:textSize="20sp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
-
-</androidx.constraintlayout.widget.ConstraintLayout>
+            android:background="@android:color/white"
+            android:layout_marginStart="25dp"
+            android:layout_marginEnd="25dp"
+            android:layout_marginBottom="25dp"
+            android:minHeight="120dp"
+            android:padding="8dp"
+            android:layout_marginTop="30dp"
+            android:text="@string/lorem_ipsum_dolor_sit_amet_consectetur_adipiscing_elit_phasellus_imperdiet_nulla_et_ullamcorper_dignissim_nullam_id_dolor_quis_velit_fringilla_venenatis_integer_vitae_metus_ac_felis_varius_posuere"
+            android:textColor="@android:color/black"
+            android:textSize="20sp"
+            app:layout_constraintTop_toBottomOf="@id/rating_box"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"/>
+    </androidx.constraintlayout.widget.ConstraintLayout>
+</ScrollView>
