--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -9,6 +9,22 @@
     tools:layout_editor_absoluteX="-3dp"
     tools:layout_editor_absoluteY="-5dp">
 
+
+    <!-- icon back -->
+    <ImageView
+        android:id="@+id/icon_back"
+        android:layout_width="88dp"
+        android:layout_height="73dp"
+        android:layout_marginTop="16dp"
+        android:contentDescription="@string/icon_back"
+        android:scaleType="centerInside"
+        app:layout_constraintHorizontal_bias="0"
+        android:src="@drawable/icon_back"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"/>
+
+
     <!-- Logo Image -->
     <ImageView
         android:id="@+id/logoSmall"
