--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -24,14 +24,14 @@
         android:id="@+id/icon_menu_user"
         android:layout_width="30dp"
         android:layout_height="30dp"
+        android:layout_marginTop="40dp"
         android:contentDescription="@string/menu_icon"
         android:scaleType="centerCrop"
         android:src="@drawable/icon_menu"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.9"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        android:layout_marginTop="40dp"/>
+        app:layout_constraintTop_toTopOf="parent" />
 
     <!-- Fragment Container -->
     <FrameLayout
@@ -61,71 +61,73 @@
             android:id="@+id/icon_home"
             android:layout_width="0dp"
             android:layout_height="40dp"
-        android:contentDescription="@string/home"
-        android:onClick="onIconClick"
-        android:src="@drawable/icon_feed"
-        app:layout_constraintWidth_percent="0.2"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"/>
+            android:contentDescription="@string/home"
+            android:onClick="onIconClick"
+            android:src="@drawable/icon_feed"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintWidth_percent="0.2" />
 
         <!-- Historic Icon -->
         <ImageView
             android:id="@+id/icon_feed"
             android:layout_width="0dp"
             android:layout_height="40dp"
-        android:contentDescription="@string/feed_"
-        android:onClick="onIconClick"
-        android:src="@drawable/icon_historic"
-        app:layout_constraintWidth_percent="0.2"
-        app:layout_constraintStart_toEndOf="@id/icon_home"
-        app:layout_constraintTop_toTopOf="parent"/>
+            android:contentDescription="@string/feed_"
+            android:onClick="onIconClick"
+            android:src="@drawable/icon_historic"
+            app:layout_constraintStart_toEndOf="@id/icon_home"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintWidth_percent="0.2" />
 
         <!-- Add Icon -->
         <ImageView
             android:id="@+id/icon_add"
             android:layout_width="0dp"
             android:layout_height="50dp"
-        android:contentDescription="@string/add_"
-        android:onClick="onIconClick"
-        android:src="@drawable/icon_add"
-        app:layout_constraintWidth_percent="0.2"
-        app:layout_constraintStart_toEndOf="@id/icon_feed"
-        app:layout_constraintTop_toTopOf="parent"/>
+            android:contentDescription="@string/add_"
+            android:onClick="onIconClick"
+            android:src="@drawable/icon_add"
+            app:layout_constraintStart_toEndOf="@id/icon_feed"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintWidth_percent="0.2" />
 
         <!-- Ranking Icon -->
         <ImageView
             android:id="@+id/icon_ranking"
             android:layout_width="0dp"
             android:layout_height="40dp"
-        android:contentDescription="@string/ranking_"
-        android:onClick="onIconClick"
-        android:src="@drawable/icon_ranking"
-        app:layout_constraintWidth_percent="0.2"
-        app:layout_constraintStart_toEndOf="@id/icon_add"
-        app:layout_constraintTop_toTopOf="parent"/>
+            android:contentDescription="@string/ranking_"
+            android:onClick="onIconClick"
+            android:src="@drawable/icon_ranking"
+            app:layout_constraintStart_toEndOf="@id/icon_add"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintWidth_percent="0.2" />
 
         <!-- Profile Icon -->
         <ImageView
             android:id="@+id/icon_profile"
             android:layout_width="0dp"
             android:layout_height="40dp"
-        android:contentDescription="@string/profile"
-        android:onClick="onIconClick"
-        android:src="@drawable/icon_profile"
-        app:layout_constraintWidth_percent="0.2"
-        app:layout_constraintStart_toEndOf="@id/icon_ranking"
-        app:layout_constraintTop_toTopOf="parent"/>
+            android:contentDescription="@string/profile"
+            android:onClick="onIconClick"
+            android:src="@drawable/icon_profile"
+            app:layout_constraintStart_toEndOf="@id/icon_ranking"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintWidth_percent="0.2" />
 
-        <!-- Icon Under Bar -->
         <ImageView
             android:id="@+id/icon_under_bar"
             android:layout_width="0dp"
             android:layout_height="5dp"
+            android:layout_marginTop="5dp"
             android:contentDescription="@string/icon_under_bar"
             android:src="@drawable/icon_under_bar"
-            app:layout_constraintWidth_percent="0.2"
+            app:layout_constraintEnd_toEndOf="@id/icon_profile"
             app:layout_constraintStart_toStartOf="@id/icon_home"
-            app:layout_constraintTop_toBottomOf="@id/icon_home"/>
+            app:layout_constraintTop_toBottomOf="@id/footer"
+            app:layout_constraintWidth_percent="0.2" />
+
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
