--- a/app/src/main/res/layout/fragment_historic_given.xml
+++ b/app/src/main/res/layout/fragment_historic_given.xml
@@ -49,7 +49,8 @@
                 android:layout_marginTop="10dp"
                 android:clipToPadding="false"
                 android:paddingBottom="10dp"
-                tools:listitem="@layout/historic_given_feedback_card"></androidx.recyclerview.widget.RecyclerView>
+                tools:listitem="@layout/historic_given_feedback_card">
+            </androidx.recyclerview.widget.RecyclerView>
         </LinearLayout>
     </ScrollView>
 </FrameLayout>
