--- a/app/src/main/res/layout/fragment_profile_user.xml
+++ b/app/src/main/res/layout/fragment_profile_user.xml
@@ -7,13 +7,12 @@
     android:background="@android:color/transparent">
 
     <!-- User Photo -->
-    <ImageView
+    <de.hdodenhof.circleimageview.CircleImageView
         android:id="@+id/user_photo"
         android:layout_width="100dp"
         android:layout_height="100dp"
         android:layout_marginTop="4dp"
         android:contentDescription="@string/user_photo__"
-        android:scaleType="centerCrop"
         android:src="@drawable/profile_default_image"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.498"
